[tool.poetry]
name = "auc"
version = "0.1.0"
description = "Outputs the Roman time and date in Latin"
authors = ["tech189 <dlloyd189@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
astral = "^2.2"

[tool.poetry.dev-dependencies]
pylint = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
